force-app/main/default/objects/Opportunity/fields/Chargebee_Coupon_ARR__c.field-meta.xml
<CustomField>
    <fullName>Chargebee_Coupon_ARR__c</fullName>
    <label>Chargebee Coupon ARR</label>
    <summarizedField>OpportunityLineItem.Chargebee_Coupon_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Coupon_Source__c</field>
        <operation>equals</operation>
        <value>Chargebee Coupon</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>