force-app/main/default/objects/Opportunity/fields/chargebeeapps__Additional_SubInvoice_Params__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Additional_SubInvoice_Params__c</fullName>
    <label>Additional Sub-Invoice Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>