force-app/main/default/objects/Opportunity/fields/chargebeeapps__Business_Entity__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Business_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Entity</label>
    <referenceTo>chargebeeapps__CB_Business_Entity__c</referenceTo>
    <relationshipLabel>Opportunity</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>