force-app/main/default/objects/Opportunity/fields/chargebeeapps__CB_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__CB_Opportunity_Type__c</fullName>
    <label>CB Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New subscription</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Upgrade/Downgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>