force-app/main/default/objects/Opportunity/fields/chargebeeapps__CB_Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__CB_Subscription_Id__c</fullName>
    <label>CB Subscription Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>