force-app/main/default/objects/Opportunity/fields/chargebeeapps__Chargebee_Checkout_Link__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Chargebee_Checkout_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Generates checkout link.</description>
    <inlineHelpText>Generates checkout link.</inlineHelpText>
    <label>Chargebee Checkout Link</label>
    <type>Checkbox</type>
</CustomField>