force-app/main/default/objects/Opportunity/fields/chargebeeapps__Create_Ramps__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Create_Ramps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create/Update Ramps</label>
    <type>Checkbox</type>
</CustomField>