force-app/main/default/objects/Opportunity/fields/chargebeeapps__Ct_Term_Id__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Ct_Term_Id__c</fullName>
    <label>Contract term Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>