force-app/main/default/objects/Opportunity/fields/chargebeeapps__DeltaAmendment__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__DeltaAmendment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This setting is for Delta Amendment</description>
    <label>Delta Amendment</label>
    <type>Checkbox</type>
</CustomField>