force-app/main/default/objects/Opportunity/fields/chargebeeapps__Manual_Discount__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Manual_Discount__c</fullName>
    <label>Manual Discount</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>