force-app/main/default/objects/Opportunity/fields/chargebeeapps__Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Payment_Link__c</fullName>
    <label>Payment Link</label>
    <type>Url</type>
</CustomField>