force-app/main/default/objects/Opportunity/fields/chargebeeapps__Renewal_Opportunity_Behaviour__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Renewal_Opportunity_Behaviour__c</fullName>
    <label>Renewal Opportunity Behaviour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LOCK_ONLY_OPPORTUNITY_LINE_ITEMS</fullName>
                <label>Lock Only Opportunity Line Items</label>
            </value>
            <value>
                <fullName>LOCK_OPPORTUNITY_AND_RELATED_LINE_ITEMS</fullName>
                <label>Lock Opportunity and Related Line Items</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>