force-app/main/default/objects/Opportunity/fields/chargebeeapps__Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Subscription_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription Id</label>
    <referenceTo>chargebeeapps__CB_Subscription__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>