force-app/main/default/objects/Opportunity/fields/chargebeeapps__Update_Chargebee__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Update_Chargebee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Chargebee</label>
    <type>Checkbox</type>
</CustomField>