force-app/main/default/objects/Opportunity/fields/Close_Date2__c.field-meta.xml
<CustomField>
    <fullName>Close_Date2__c</fullName>
    <formula>CASE(MONTH(CloseDate), 
1, &quot;04&quot;, 
2, &quot;05&quot;, 
3, &quot;06&quot;, 
4, &quot;07&quot;, 
5, &quot;08&quot;, 
6, &quot;09&quot;, 
7, &quot;10&quot;, 
8, &quot;11&quot;, 
9, &quot;12&quot;, 
10, &quot;01&quot;, 
11, &quot;02&quot;, 
12, &quot;03&quot;, 
NULL)
+&quot;-&quot;+
CASE(MONTH(CloseDate), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date2</label>
    <type>Text</type>
</CustomField>