force-app/main/default/objects/Opportunity/fields/Close_Reason_Description__c.field-meta.xml
<CustomField>
    <fullName>Close_Reason_Description__c</fullName>
    <label>Closed Reason Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>