force-app/main/default/objects/Opportunity/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <inlineHelpText>Please select a reason that this deal did not close.  Enter any additional comments in the Description field.</inlineHelpText>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price too high</fullName>
            </value>
            <value>
                <fullName>Kept current solution</fullName>
            </value>
            <value>
                <fullName>Internal/consultant build</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Wrong contact/no decision maker</fullName>
            </value>
            <value>
                <fullName>No budget</fullName>
            </value>
            <value>
                <fullName>Missing feature/functionality</fullName>
            </value>
            <value>
                <fullName>No decision</fullName>
            </value>
            <value>
                <fullName>Not qualified/not ICP</fullName>
            </value>
            <value>
                <fullName>Stopped responding</fullName>
            </value>
            <value>
                <fullName>Custom Only - Cavallo Declined</fullName>
            </value>
            <value>
                <fullName>Custom Only - Transferred to Support</fullName>
            </value>
            <value>
                <fullName>Discovery Call No Show</fullName>
            </value>
            <value>
                <fullName>Chargebee Issue - Had to create a new opp</fullName>
            </value>
            <value>
                <fullName>COVID-19</fullName>
                <isActive>false</isActive>
                <label>COVID-19</label>
            </value>
            <value>
                <fullName>Cavallo Declined</fullName>
                <isActive>false</isActive>
                <label>Cavallo Declined</label>
            </value>
            <value>
                <fullName>Convert to Other Opportunity</fullName>
                <isActive>false</isActive>
                <label>Convert to Other Opportunity</label>
            </value>
            <value>
                <fullName>Converted to a GP lead</fullName>
                <isActive>false</isActive>
                <label>Converted to Other SP Product</label>
            </value>
            <value>
                <fullName>Customer Declined</fullName>
                <isActive>false</isActive>
                <label>Customer Declined</label>
            </value>
            <value>
                <fullName>Ease of Use</fullName>
                <isActive>false</isActive>
                <label>Ease of Use</label>
            </value>
            <value>
                <fullName>Error Creation</fullName>
                <isActive>false</isActive>
                <label>Error Creation</label>
            </value>
            <value>
                <fullName>Missing Functionality</fullName>
                <isActive>false</isActive>
                <label>Missing Functionality</label>
            </value>
            <value>
                <fullName>Moving to Standard Opp</fullName>
                <isActive>false</isActive>
                <label>Moving to Standard Opp</label>
            </value>
            <value>
                <fullName>No ERP Integration</fullName>
                <isActive>false</isActive>
                <label>No ERP Integration</label>
            </value>
            <value>
                <fullName>No Longer Using Software</fullName>
                <isActive>false</isActive>
                <label>No Longer Using Software</label>
            </value>
            <value>
                <fullName>Not Ideal Client Profile</fullName>
                <isActive>false</isActive>
                <label>Not Ideal Client Profile</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Price</fullName>
                <isActive>false</isActive>
                <label>Price</label>
            </value>
            <value>
                <fullName>Quote Expired</fullName>
                <isActive>false</isActive>
                <label>Quote Expired</label>
            </value>
            <value>
                <fullName>Support</fullName>
                <isActive>false</isActive>
                <label>Support</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>