force-app/main/default/objects/Opportunity/fields/Closed_Won_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed Won Email Sent</label>
    <type>Checkbox</type>
</CustomField>