force-app/main/default/objects/Opportunity/fields/CO_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>CO_Record_Type__c</fullName>
    <label>CO Record Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>