force-app/main/default/objects/Opportunity/fields/Committed_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Committed_Payment_Date__c</fullName>
    <label>Committed Payment Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed in writing</fullName>
            </value>
            <value>
                <fullName>Customer using best effort to meet payment due date</fullName>
            </value>
            <value>
                <fullName>No committed payment date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>