force-app/main/default/objects/Opportunity/fields/Compelling_Event_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Compelling_Event_Timeline__c</fullName>
    <inlineHelpText>What is their desired timeframe?  What happens if they miss the timeframe?  Are there any obstacles/constraints to their timelines, or is this timeline flexible (i.e. busy season; code freezes; audit dates)</inlineHelpText>
    <label>Compelling Event (Timeline)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>