force-app/main/default/objects/Opportunity/fields/Competence_Fit__c.field-meta.xml
<CustomField>
    <fullName>Competence_Fit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competence Fit</label>
    <type>Checkbox</type>
</CustomField>