force-app/main/default/objects/Opportunity/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <description>Is there competition, if so, who? Is there competition, if so, who? Tip: If there&apos;s no competition, status quo is the competition</description>
    <inlineHelpText>Is there competition, if so, who? Is there competition, if so, who? Tip: If there&apos;s no competition, status quo is the competition</inlineHelpText>
    <label>Competition</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>