force-app/main/default/objects/Opportunity/fields/Confluence_Project_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Confluence_Project_Page_URL__c</fullName>
    <label>Confluence Project Page URL</label>
    <type>Url</type>
</CustomField>