force-app/main/default/objects/Opportunity/fields/Consultant_Upgrade_Required2__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Upgrade_Required2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consultant Upgrade Required.</label>
    <type>Checkbox</type>
</CustomField>