force-app/main/default/objects/Opportunity/fields/Contact_Role_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_Email__c</fullName>
    <label>Primary Contact Role Email</label>
    <type>Email</type>
</CustomField>