force-app/main/default/objects/Opportunity/fields/Contact_Roles_Loaded__c.field-meta.xml
<CustomField>
    <fullName>Contact_Roles_Loaded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Using the CONTACT ROLES RELATED LIST, make sure that you have identified the following contact roles:
 - Decision Maker
 - Project Lead
 - Power User(s)
 - End User(s), if known</inlineHelpText>
    <label>Contact Roles Loaded</label>
    <type>Checkbox</type>
</CustomField>