force-app/main/default/objects/Opportunity/fields/Contains_Software_Products__c.field-meta.xml
<CustomField>
    <fullName>Contains_Software_Products__c</fullName>
    <label>Contains Software Products</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Family__c</field>
        <operation>equals</operation>
        <value>CLOUD_PRODUCTS, DESKTOP_ENHANCEMENT, DESKTOP_PRODUCTS, DESKTOP_SPLA, DESKTOP_SUBSCRIPTION, DISTRIBUTION_CLOUD, INTELLIGENCE, SALESPAD_SUBSCRIPTION, ANALYTICS CLOUD</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>