force-app/main/default/objects/Opportunity/fields/Contract_End_date_forward__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_date_forward__c</fullName>
    <label>Contract End date (forward)</label>
    <type>Date</type>
</CustomField>