force-app/main/default/objects/Opportunity/fields/Contract_Negotiation_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Negotiation_Date__c</fullName>
    <label>Contract Negotiation Date</label>
    <type>Date</type>
</CustomField>