force-app/main/default/objects/Opportunity/fields/Contract_Start_Date_forward__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date_forward__c</fullName>
    <label>Contract Start Date(forward)</label>
    <type>Date</type>
</CustomField>