force-app/main/default/objects/Opportunity/fields/Contractual_Date__c.field-meta.xml
<CustomField>
    <fullName>Contractual_Date__c</fullName>
    <label>Contractual Date</label>
    <type>Date</type>
</CustomField>