force-app/main/default/objects/Opportunity/fields/Contributes_to_Product_Value__c.field-meta.xml
<CustomField>
    <fullName>Contributes_to_Product_Value__c</fullName>
    <label>Contributes to Product Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>