force-app/main/default/objects/Opportunity/fields/COOpp__c.field-meta.xml
<CustomField>
    <fullName>COOpp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COOpp</label>
    <type>Checkbox</type>
</CustomField>