force-app/main/default/objects/Opportunity/fields/Coupon_Discount__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Discount__c</fullName>
    <description>Total discount percentage from all Chargebee opportunity coupons</description>
    <label>Coupon Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>