force-app/main/default/objects/Opportunity/fields/Created_By_PM__c.field-meta.xml
<CustomField>
    <fullName>Created_By_PM__c</fullName>
    <formula>CreatedBy.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created_By_Role</label>
    <type>Text</type>
</CustomField>