force-app/main/default/objects/Opportunity/fields/Created_Date2__c.field-meta.xml
<CustomField>
    <fullName>Created_Date2__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date2</label>
    <type>Date</type>
</CustomField>