force-app/main/default/objects/Opportunity/fields/Cultural_Fit__c.field-meta.xml
<CustomField>
    <fullName>Cultural_Fit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cultural Fit</label>
    <type>Checkbox</type>
</CustomField>