force-app/main/default/objects/Opportunity/fields/Cultural_Fit_Description__c.field-meta.xml
<CustomField>
    <fullName>Cultural_Fit_Description__c</fullName>
    <formula>&quot;They have beliefs, morals, attitudes, etc. that are compatible with how Cavallo works and our values&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cultural Fit Description</label>
    <type>Text</type>
</CustomField>