force-app/main/default/objects/Opportunity/fields/Current_Progress__c.field-meta.xml
<CustomField>
    <fullName>Current_Progress__c</fullName>
    <label>Current Progress</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>