force-app/main/default/objects/Opportunity/fields/Current_Solution__c.field-meta.xml
<CustomField>
    <fullName>Current_Solution__c</fullName>
    <label>Current Solution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>