force-app/main/default/objects/Opportunity/fields/Custom_Development_Maintenance_Plan_B2B__c.field-meta.xml
<CustomField>
    <fullName>Custom_Development_Maintenance_Plan_B2B__c</fullName>
    <label>Custom Development Maintenance Plan-B2B</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>