force-app/main/default/objects/Opportunity/fields/Custom_Development_RFQ__c.field-meta.xml
<CustomField>
    <fullName>Custom_Development_RFQ__c</fullName>
    <formula>HYPERLINK(&quot;https://www.cavallo.com/custom-development-rfq/&quot;, &quot;Custom Development RFQ&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Development RFQ Link</label>
    <type>Text</type>
</CustomField>