force-app/main/default/objects/Opportunity/fields/Custom_Required__c.field-meta.xml
<CustomField>
    <fullName>Custom_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Required</label>
    <type>Checkbox</type>
</CustomField>