force-app/main/default/objects/Opportunity/fields/Customer_IT_Champion_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_IT_Champion_Email_Address__c</fullName>
    <label>Customer IT Champion (Email Address)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>