force-app/main/default/objects/Opportunity/fields/Customer_Paper_Process__c.field-meta.xml
<CustomField>
    <fullName>Customer_Paper_Process__c</fullName>
    <label>Customer Paper Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>