force-app/main/default/objects/Opportunity/fields/Customer_Required_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Required_Date__c</fullName>
    <label>Customer Required Date</label>
    <type>Date</type>
</CustomField>