force-app/main/default/objects/Opportunity/fields/Customer_Value__c.field-meta.xml
<CustomField>
    <fullName>Customer_Value__c</fullName>
    <label>Customer Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>