force-app/main/default/objects/Opportunity/fields/Days_left_in_the_quarter__c.field-meta.xml
<CustomField>
    <fullName>Days_left_in_the_quarter__c</fullName>
    <formula>IF(MONTH(TODAY()) &lt;= 3, 
DATE(YEAR(TODAY()), 03 , 31 ), 
IF(MONTH(TODAY()) &lt;= 6, 
DATE(YEAR(TODAY()), 06 , 30 ), 
IF(MONTH(TODAY()) &lt;= 9, 
DATE(YEAR(TODAY()), 09 , 30 ), 
DATE(YEAR(TODAY()), 12 , 31 )))) 
- 
TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days left in the quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>