force-app/main/default/objects/Opportunity/fields/Days_left_of_Trial__c.field-meta.xml
<CustomField>
    <fullName>Days_left_of_Trial__c</fullName>
    <formula>CloseDate - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days left of Trial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>