force-app/main/default/objects/Opportunity/fields/Days_took_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_took_to_Close__c</fullName>
    <formula>CloseDate - datevalue(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days took to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>