force-app/main/default/objects/Opportunity/fields/Deal_Count__c.field-meta.xml
<CustomField>
    <fullName>Deal_Count__c</fullName>
    <formula>IF(  Analytics_Cloud_Amount__c  &gt; 0.00 &amp;&amp; of_Analytics_Products__c &gt;0 &amp;&amp; TEXT( StageName )=&apos;Closed Won&apos; , 1, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>