force-app/main/default/objects/Opportunity/fields/Decision_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Decision_Criteria__c</fullName>
    <description>What are the company&apos;s decision-making criteria (simplicity of use, integration, budget constraints, and potential ROI)?</description>
    <inlineHelpText>What are the company&apos;s decision-making criteria (simplicity of use, integration, budget constraints, and potential ROI)?</inlineHelpText>
    <label>Decision Criteria</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>