force-app/main/default/objects/Opportunity/fields/Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who’s signature goes on the actual order form?</inlineHelpText>
    <label>Buyer (Authority)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>