force-app/main/default/objects/Opportunity/fields/Decision_Process__c.field-meta.xml
<CustomField>
    <fullName>Decision_Process__c</fullName>
    <description>What is the company&apos;s decision-making process? How is it made and followed through?</description>
    <inlineHelpText>What is the company&apos;s decision-making process? How is it made and followed through?</inlineHelpText>
    <label>Decision Process</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>