force-app/main/default/objects/Opportunity/fields/Delivery_Call_Needed__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Call_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the SE should be included on a delivery call for the custom solution</inlineHelpText>
    <label>Delivery Call Needed</label>
    <type>Checkbox</type>
</CustomField>