force-app/main/default/objects/Opportunity/fields/Demo_Technical_Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Technical_Evaluation_Date__c</fullName>
    <label>Demo/Technical Evaluation Date</label>
    <type>Date</type>
</CustomField>