force-app/main/default/objects/Opportunity/fields/Direct_Customer__c.field-meta.xml
<CustomField>
    <fullName>Direct_Customer__c</fullName>
    <formula>IF( Account.Name &lt;&gt; Partner__c , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Customer?</label>
    <type>Checkbox</type>
</CustomField>