force-app/main/default/objects/Opportunity/fields/Direct_v_Partner__c.field-meta.xml
<CustomField>
    <fullName>Direct_v_Partner__c</fullName>
    <inlineHelpText>Is this being sold through a partner, or directly to the end user?</inlineHelpText>
    <label>Direct v Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>