force-app/main/default/objects/Opportunity/fields/DirectReason__c.field-meta.xml
<CustomField>
    <fullName>DirectReason__c</fullName>
    <label>DirectReason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>