force-app/main/default/objects/Opportunity/fields/Discount_Applied__c.field-meta.xml
<CustomField>
    <fullName>Discount_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when Opportunity has a discount applied to it</description>
    <label>Discount Applied</label>
    <type>Checkbox</type>
</CustomField>