force-app/main/default/objects/Opportunity/fields/Discount_Description__c.field-meta.xml
<CustomField>
    <fullName>Discount_Description__c</fullName>
    <description>Description of discount structure</description>
    <label>Discount Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>