force-app/main/default/objects/Opportunity/fields/Discovery_Call_Needed__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Call_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discovery Call Needed</label>
    <type>Checkbox</type>
</CustomField>