force-app/main/default/objects/Opportunity/fields/Discovery_Held__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Held__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discovery Held</label>
    <type>Checkbox</type>
</CustomField>