force-app/main/default/objects/Opportunity/fields/DMAIC_Upgrade_Form__c.field-meta.xml
<CustomField>
    <fullName>DMAIC_Upgrade_Form__c</fullName>
    <label>DMAIC/Upgrade Form</label>
    <type>Url</type>
</CustomField>