force-app/main/default/objects/Opportunity/fields/DML_Code__c.field-meta.xml
<CustomField>
    <fullName>DML_Code__c</fullName>
    <label>DML Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>