force-app/main/default/objects/Opportunity/fields/Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Number__c</fullName>
    <formula>LEFT(Account.Name, 5)&amp;&quot;-&quot;&amp;LEFT(TEXT(Type), 6)&amp; LEFT(SUBSTITUTE(TEXT(CreatedDate),&quot;-&quot;,&quot;&quot;),8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Number</label>
    <type>Text</type>
</CustomField>