force-app/main/default/objects/Opportunity/fields/Docusign_EnvelopId__c.field-meta.xml
<CustomField>
    <fullName>Docusign_EnvelopId__c</fullName>
    <description>Docusign_EnvelopId__c</description>
    <label>Docusign EnvelopId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>